--- a/usr/share/plymouth/themes/ubuntu-regolith-text/ubuntu-regolith-text.plymouth.in
+++ b/usr/share/plymouth/themes/ubuntu-regolith-text/ubuntu-regolith-text.plymouth.in
@@ -5,7 +5,7 @@ ModuleName=ubuntu-text
 
 [ubuntu-text]
 title=Regolith VERSION
-black=0x2d3335
+black=0x000000
 white=0xffffff
 brown=0x0087ed
 blue=0x133773
